<resources>
    <string name="app_name">Soosh</string>
    <string name="backgroundImage">background image</string>
    <string name="desired_league">Desired League:</string>
    <string name="swooshLogo">swooshLogo</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">Next!</string>
    <string name="goAll_n">GO ALL IN</string>
    <string name="onGoingAllOut">On going all out</string>
    <string name="findATeamInYourCityAndDominateTheLeague">Find a team in your city and dominate the league!</string>
    <string name="getStarted">Get started!</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish!</string>
    <string name="searchLeague">Looking for a co-ed beginner league near you...</string>
</resources>
